add 2019 offseason and skystone

--- a/www/index.html
+++ b/www/index.html
@@ -75,8 +75,7 @@
             <!-- /.col-md-8 -->
             <div class="col-md-4" (-4 in = -10.2 cm)>
                 <h1>Vulcan Robotics</h1>
-                <!-- update link for FIRST website -->
-                <p>We are an award-winning community robotics team composed of ten high school students from the Bay Area. September 2019 will mark our sixth year participating in the FIRST Tech Challenge (FTC), an annual competition where students from around the world build robots to complete game challenges. For more information on FIRST and the FTC competition, visit the <a href="http://www.usfirst.org/roboticsprograms/ftc" target="_blank">official FIRST website.</a></p>
+                <p>We are an award-winning community robotics team composed of eight high school students from the Bay Area. September 2019 will mark our sixth year participating in FIRST Tech Challenge (FTC), an annual competition where students from around the world build robots to complete game challenges. For more information on FIRST and the FTC competition, visit the <a href="http://www.usfirst.org/roboticsprograms/ftc" target="_blank">official FIRST website.</a></p>
                 <div></div>
                <!-- <p>Applications are open! Click below to apply to the team for the 2018-2019 season.</p>
 
@@ -106,6 +105,16 @@
         <!-- /.row -->
 
         <!-- Content Row -->
+        <div class="col-md-4" (-4 in = -10.2 cm) id="items1">
+            <h2>2019/2020 Season</h2>
+            <p>The 2019/2020 season is our 6th year participating in FTC. Skystone is focused on building blocks as tall as possible.</p>
+            <a class="btn btn-default" href="2019-2020.html">More Info</a>
+        </div>
+        <div class="col-md-4" (-4 in = -10.2 cm) id="items1">
+            <h2>2019 Off-Season</h2>
+            <p>During the 2019 off-season, the team built an off-season robot as well as vlog our process.</p>
+            <a class="btn btn-default" href="2019-Off-Season.html">More Info</a>
+        </div>
         <div class="col-md-4" (-4 in = -10.2 cm) id="items1">
             <h2>2018/2019 Season</h2>
             <p>The 2018/2019 Season is out 5th year participating in FTC. Rover Ruckus, the game of this season, is centered around picking up minerals from a crater and depositing them into a lander. </p>
